Added the Chat ClojureScript SPA

--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -59,6 +59,7 @@
         <li><a href="{% url phonebook-index %}">Phonebook</a></li>
         <li><a href="{% url swagger %}/?url={% absurl phonebook-swagger %}">Swagger UI</a></li>
         <li><a href="{% url phonebook-app %}">Phonebook App (SPA)</a></li>
+        <li><a href="{% url chat-app %}">Chat App (SPA)</a></li>
       </ul>
     </p>
   </section>
